--- a/projects/SensoriMotorPrediction/SensoriMotorPrediction/SensoriMotorPrediction.vcxproj
+++ b/projects/SensoriMotorPrediction/SensoriMotorPrediction/SensoriMotorPrediction.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{603cb6cd-ddb1-4344-817e-c3568c61e8ae}</ProjectGuid>
+    <ProjectGuid>{17cd54d8-73c4-4210-a2b9-3295731d905b}</ProjectGuid>
     <RootNamespace>SensoriMotorPrediction</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -82,7 +82,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_CRT_SECURE_NO_WARNINGS;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -96,7 +96,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_CRT_SECURE_NO_WARNINGS;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -150,7 +150,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\include\DataManager.h" />
     <ClInclude Include="..\..\..\include\Experiment.h" />
-    <ClInclude Include="..\..\..\include\PneumaticBox4F.h" />
+    <ClInclude Include="..\..\..\include\PneumaticBox.h" />
     <ClInclude Include="..\..\..\include\S626sManager.h" />
     <ClInclude Include="..\..\..\include\Screen.h" />
     <ClInclude Include="..\..\..\include\Serial.h" />
