--- a/projects/SeqSpatialVis_fMRI/SeqSpatialHorizon1/SeqSpatialHorizon1.vcxproj.filters
+++ b/projects/SeqSpatialVis_fMRI/SeqSpatialHorizon1/SeqSpatialHorizon1.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClCompile Include="..\..\..\source\StimulatorBox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\source\TRCounter626.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
