--- a/projects/ExtFlexChord/efc4/efc4.vcxproj
+++ b/projects/ExtFlexChord/efc4/efc4.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="..\..\..\include\S626sManager.h" />
     <ClInclude Include="..\..\..\include\Screen.h" />
     <ClInclude Include="..\..\..\include\StimulatorBox.h" />
+    <ClInclude Include="..\..\..\include\Target.h" />
     <ClInclude Include="..\..\..\include\TextDisplay.h" />
     <ClInclude Include="..\..\..\include\Timer626.h" />
     <ClInclude Include="..\..\..\include\TRCounter626.h" />
