--- a/projects/SensoriMotorPrediction/Smp1/Smp1.vcxproj.filters
+++ b/projects/SensoriMotorPrediction/Smp1/Smp1.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="..\..\..\include\Win626.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\Target.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="smp1.cpp">
