--- a/projects/EFC_patternfMRI/EFC_patternfMRI/EFC_patternfMRI.vcxproj.filters
+++ b/projects/EFC_patternfMRI/EFC_patternfMRI/EFC_patternfMRI.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="efc_2hands.cpp">
+    <ClCompile Include="efcp_behav.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\source\Experiment.cpp">
@@ -30,27 +30,33 @@
     <ClCompile Include="..\..\..\source\Serial.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\source\StimulatorBox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\source\TextDisplay.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\source\Timer626.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\source\WIN626.C">
+    <ClCompile Include="..\..\..\source\TRCounter626.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\source\StimulatorBox.cpp">
+    <ClCompile Include="..\..\..\source\WIN626.C">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="efc_2hands.h">
+    <ClInclude Include="efcp_behav.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\include\DataManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\include\Experiment.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\S626sManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\include\Screen.h">
@@ -62,10 +68,7 @@
     <ClInclude Include="..\..\..\include\Timer626.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\include\Win626.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\include\StimulatorBox.h">
+    <ClInclude Include="..\..\..\include\TRCounter626.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
