--- a/projects/SeqSpatialLetter/SeqSpatialLetter_Behavior2/SeqSpatialLetter.vcxproj
+++ b/projects/SeqSpatialLetter/SeqSpatialLetter_Behavior2/SeqSpatialLetter.vcxproj
@@ -32,7 +32,7 @@
     <ClInclude Include="..\..\..\include\TRCounter626.h" />
     <ClInclude Include="..\..\..\include\Vector2d.h" />
     <ClInclude Include="..\..\..\include\Win626.h" />
-    <ClInclude Include="ssh1.h" />
+    <ClInclude Include="sslb2.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\source\Experiment.cpp" />
@@ -44,7 +44,7 @@
     <ClCompile Include="..\..\..\source\Timer626.cpp" />
     <ClCompile Include="..\..\..\source\TRCounter626.cpp" />
     <ClCompile Include="..\..\..\source\WIN626.C" />
-    <ClCompile Include="ssh1.cpp" />
+    <ClCompile Include="sslb2.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -52,6 +52,7 @@
     <ProjectGuid>{23b4411d-1945-45c2-a166-d0c4d2ffc0e6}</ProjectGuid>
     <RootNamespace>SeqSpatialHorizon1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>SeqSpatialLetter_Behavior2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
